--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -27,8 +27,8 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        flake8 .
+        flake8 smart_exceptions
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest tests
